<resources>
    <string name="app_name">69BravoRanTest</string>
    <string name="camera">CAMERA</string>
    <string name="pumpkin_topoff">PUMPKIN TOP OFF</string>
    <string name="dust_mitigation">DUST MITIGATION</string>
    <string name="alarms">"ALARMS  "</string>
    <string name="water_usage">WATER USAGE</string>
    <string name="wind_sock_lights">WIND SOCK LIGHTS</string>
    <string name="weather">"WEATHER "</string>
    <string name="sensors">SENSORS</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
